add: novo estilo

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* styles.css */
+
 body,
 html {
   height: 100%;
@@ -39,6 +41,40 @@ html {
   background-color: #8b0000 !important; /* Rubro escuro */
 }
 
+/* New styles for gray and ice theme */
+.gray-ice-header {
+  background-color: #d3d3d3; /* Cinza claro */
+  background-image: linear-gradient(
+      45deg,
+      #ffffff 25%,
+      transparent 25%,
+      transparent 75%,
+      #ffffff 75%,
+      #ffffff
+    ),
+    linear-gradient(
+      45deg,
+      #ffffff 25%,
+      transparent 25%,
+      transparent 75%,
+      #ffffff 75%,
+      #ffffff
+    );
+  background-size: 160px 160px;
+  background-position: 0 0, 80px 80px;
+  color: #333333;
+}
+
+.bg-gray {
+  background-color: #d3d3d3 !important; /* Cinza claro */
+  color: #333333 !important;
+}
+
+.bg-ice {
+  background-color: #f0f8ff !important; /* Gelo */
+  color: #333333 !important;
+}
+
 section {
   padding: 20px;
 }
@@ -72,4 +108,33 @@ button {
 
 button:hover {
   background-color: #444444;
+}
+
+.position-fixed {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+
+/* Toggle button styles for different themes */
+.gray-ice-header .btn-secondary {
+  background-color: #d3d3d3;
+  color: #333333;
+}
+
+.xadrez .btn-secondary {
+  background-color: #333333;
+  color: #d3d3d3;
+}
+
+/* Button styles for different themes */
+.gray-ice-header .btn-success {
+  background-color: #808080; /* Cinza */
+  border-color: #808080;
+}
+
+.gray-ice-header .btn-danger {
+  background-color: #d3d3d3; /* Gelo */
+  border-color: #d3d3d3;
 }
