--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 @font-face {
   font-family: "Demon Slayer";
   src: url("Demon_Slayer.ttf") format("truetype"); /* Certifique-se de que o caminho para o arquivo da fonte está correto */
@@ -9,7 +7,8 @@ body,
 html {
   height: 100%;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Demon Slayer", Arial, sans-serif; /* Aplica a fonte "Demon Slayer" globalmente */
+  color: white; /* Define a cor do texto globalmente como branca */
 }
 
 .vh-100 {
@@ -36,7 +35,6 @@ html {
     );
   background-size: 160px 160px;
   background-position: 0 0, 80px 80px;
-  color: white; /* Cor do texto no tema original */
 }
 
 .bg-success {
@@ -71,6 +69,11 @@ html {
   color: #333333; /* Cor do texto no tema cinza com gelo */
 }
 
+.gray-ice-header h1,
+.gray-ice-header p.lead {
+  color: #333333; /* Cor do texto no tema cinza com gelo */
+}
+
 .bg-gray {
   background-color: #d3d3d3 !important; /* Cinza claro */
   color: #333333 !important;
@@ -93,13 +96,18 @@ form {
 label,
 input {
   margin-bottom: 10px;
-  color: white;
 }
 
 input {
   background-color: #2c2c2c;
   color: white;
   border: 1px solid white;
+}
+
+.gray-ice-header input {
+  color: #333333;
+  background-color: #e0e0e0;
+  border: 1px solid #333333;
 }
 
 button {
@@ -134,15 +142,17 @@ button:hover {
   color: #d3d3d3;
 }
 
-/* Button styles for different themes */
-.gray-ice-header .btn-success {
-  background-color: #808080; /* Cinza */
-  border-color: #808080;
+/* Custom button styles */
+.btn-custom-rubro {
+  background-color: #8b0000; /* Rubro escuro */
+  border-color: #8b0000;
+  color: white;
 }
 
-.gray-ice-header .btn-danger {
-  background-color: #d3d3d3; /* Gelo */
-  border-color: #d3d3d3;
+.btn-custom-ice {
+  background-color: #b0c4de; /* Azul claro (Light Steel Blue) */
+  border-color: #b0c4de;
+  color: #333333;
 }
 
 .gray-ice-header .text-white,
@@ -153,6 +163,5 @@ button:hover {
 
 #produtos-servicos p {
   margin: 0 20%;
-  font-family: "Demon Slayer", Arial, sans-serif; /* Aplica a fonte personalizada */
   font-size: 2em; /* Dobra o tamanho da fonte */
 }
