--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body,
 html {
   height: 100%;
   margin: 0;
-  font-family: "Demon Slayer", Arial, sans-serif; /* Aplica a fonte "Demon Slayer" globalmente */
-  color: white; /* Define a cor do texto globalmente como branca */
+  font-family: "Demon Slayer", Arial, sans-serif;
+  color: white;
 }
 
 .vh-100 {
@@ -84,7 +84,44 @@ html {
 }
 
 section {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
+  box-sizing: border-box;
+}
+
+#produtos-servicos p {
+  margin: 0 5%;
+  font-size: 1.5em;
+  word-wrap: break-word;
+}
+
+@media (max-width: 576px) {
+  #produtos-servicos p {
+    margin: 0 10%;
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 768px) {
+  #produtos-servicos p {
+    margin: 0 8%;
+    font-size: 1.2em;
+  }
+}
+
+@media (max-width: 992px) {
+  #produtos-servicos p {
+    margin: 0 6%;
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1200px) {
+  #produtos-servicos p {
+    margin: 0 20%;
+    font-size: 2em;
+  }
 }
 
 form {
@@ -126,8 +163,8 @@ button:hover {
   top: 10px;
   right: 10px;
   z-index: 1000;
-  padding: 15px; /* Increase padding for larger button */
-  font-size: 1.2em; /* Increase font size for larger button */
+  padding: 15px;
+  font-size: 1.2em;
 }
 
 .gray-ice-header .btn-secondary {
@@ -167,10 +204,5 @@ button:hover {
 .gray-ice-header .text-white,
 .bg-gray .text-white,
 .bg-ice .text-white {
-  color: #333333; /* Ensure text is readable on light background */
-}
-
-#produtos-servicos p {
-  margin: 0 20%;
-  font-size: 2em;
+  color: #333333;
 }
